2013-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Reintroduce is_simple_2d and connectivity_number_2d into mln::topo.

	* mln/topo/is_simple_2d.hh (mln::topo::is_simple_2d)
	(mln::topo::connectivity_number_2d):
	New.
	* apps/generic-skel/image2d-skel.hh (is_simple_2d::operator()):
	Adjust.

2011-05-31  Roland Levillain  <roland@lrde.epita.fr>

	Factor connectivity_numbers_3d and connectivity_numbers_3d_tbb.

	* tools/connectivity_numbers_3d.hh (connectivity_numbers_3d):
	Reindent.
	(connectivity_number_3d__6_26_one)
	(connectivity_number_3d__6p_18_one)
	(connectivity_number_3d__18_6p_one):
	Fix types: s/config_3d_t/conn_number_t/.
	(usage): New function.
	(display_connectivity_numbers): New function.
	Use it to simplify...
	* tools/connectivity_numbers_3d.cc,
	* tools/connectivity_numbers_3d_tbb.cc (main): ...these functions.
	(usage): Remove.
	* tools/compute_local_configurations.cc,
	* tools/connectivity_numbers_3d_tbb.hh:
	Add a comment.

2011-05-25  Roland Levillain  <roland@lrde.epita.fr>

	Add a parallel version of connectivity_numbers_3d using TBB.

	* tools/connectivity_numbers_3d_tbb.hh,
	* tools/connectivity_numbers_3d_tbb.cc:
	New.
	* tools/Makefile.am (CPPFLAGS_TBB, LDFLAGS_TBB): New.
	(extra): New (phony) target.
	(EXTRA_PROGRAMS)
	(connectivity_numbers_3d_tbb_SOURCES)
	(connectivity_numbers_3d_tbb_CPPFLAGS)
	(connectivity_numbers_3d_tbb_LDFLAGS):
	New variables.

2011-05-25  Roland Levillain  <roland@lrde.epita.fr>

	Make tools/connectivity_numbers_3d thread-safe.

	* tools/connectivity_numbers_3d.hh
	(connectivity_number_3d__6_26_one)
	(connectivity_number_3d__26_6_one)
	(connectivity_number_3d__6p_18_one)
	(connectivity_number_3d__18_6p_one):
	Create and use a copy of the neighborhood instead of using a
	shared, thread-unsafe object.
	Aesthetic changes.
	* tools/connectivity_numbers_3d.cc: Aesthetic changes.

2011-05-25  Roland Levillain  <roland@lrde.epita.fr>

	Factor soon-to-be shared components of connectivity_numbers_3d.
